force-app/main/default/objects/Loan_Schedule__c/Loan_Schedule__c.object-meta.xml
<CustomObject>
    <label>Loan Schedule</label>
    <nameField>
        <label>Loan Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>