force-app/main/default/objects/Loan_Schedule__c/fields/Interest_Payed__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payed__c</fullName>
    <label>Interest Payed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>